<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_overview" />

            <RelativeLayout
                android:id="@+id/image_holder"
                android:layout_width="@dimen/product_image_size"
                android:layout_height="@dimen/product_image_size">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder" />

                <ImageView
                    android:id="@+id/ic_image_capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/view_low_margin"
                    android:src="@android:drawable/ic_menu_camera" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/category_margin">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_price" />

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/PriceEditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />

            </RelativeLayout>

            <TextView
                android:id="@+id/label_product_quantity"
                style="@style/QuantityCategoryStyle"
                android:text="@string/label_product_quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_sale" />

                <EditText
                    android:id="@+id/edit_sale_total"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_quantity_total"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_shipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_shipment" />

                <EditText
                    android:id="@+id/edit_shipment_total"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_quantity_total"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/category_margin">

            <Spinner
                android:id="@+id/spinner_supplier"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:paddingRight="@dimen/spinner_padding"
                android:spinnerMode="dropdown" />

            <!-- nome do fornecedor quando a tela estiver em modo de visualização -->
            <TextView
                android:id="@+id/text_supplier"
                style="@style/SupplierCategoryStyle" />

            <Button
                android:id="@+id/button_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_from_supplier" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
